--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.2",
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
@@ -21,7 +22,8 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
