--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "miragejs": "^0.1.44",
     "typescript": "4.6.3"
   }
 }
