--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
+    "@types/faker": "^6.6.9",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
