--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/react-query": "^1.2.9",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "miragejs": "^0.1.44",
