--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.2",
+    "axios": "^0.27.2",
     "framer-motion": "^6.2.8",
     "next": "12.1.1",
     "react": "17.0.2",
